test/asm/macro-arg-0.asm
MACRO m
	def x = \0
	def y = \<0> + 42
ENDM
	m hello, world
